# BorgDock

./: .gitignore  BorgDock-Implementation-Plan.md  CHANGELOG.md  CLAUDE.md  DESIGN-SYSTEM.md  FEATURES.md  LICENSE  PRDock-Implementation-Plan.md  PRDock-Styling-Guide.md  PRDock.slnx  README.md  SECURITY.md  checkout-flow-preview.html  prdock-redesign.jsx
.claude/: rules
.claude/commands/: release.md
.github/workflows/: deploy-site.yml  release-tauri.yml  release.yml  test.yml
design/mockups/: borgdock-tray-flyout.jsx  borgdock_whats_new_redesign.html  prdock-tray-flyout.jsx  prdock_whats_new_redesign.html  whats-new-1.0.11.html  whats-new-1.0.12.html  whats-new-1.0.15.html
docs/superpowers/plans/: 2026-04-14-whats-new-plan.md  2026-04-16-ado-az-cli-auth-plan.md  2026-04-21-file-palette.md  2026-04-23-file-index-persistent-cache.md  2026-04-23-file-palette-changed-files.md  2026-04-23-tray-first-ux-plan.md  2026-04-23-tray-first-ux-test-scenarios.md  2026-04-24-streamline-pr00-regression-baseline.md  2026-04-24-streamline-pr01-foundation.md  2026-04-24-streamline-pr02-chrome.md  2026-04-24-streamline-pr03-pr-surfaces.md  2026-04-24-streamline-pr04-pr-detail.md  2026-04-24-streamline-pr05-palettes.md  2026-04-24-streamline-pr06-ancillary.md  2026-04-26-streamline-pr08-test-infra.md  2026-04-26-streamline-pr09-visual-routes.md  2026-04-28-file-palette-custom-roots-ui.md  2026-04-28-sql-autocomplete.md  2026-04-30-agent-overview.md  2026-04-30-file-palette-v2.md  2026-04-30-unified-merge-celebration.md
docs/superpowers/specs/: 2026-04-14-whats-new-design.md  2026-04-16-ado-az-cli-auth-design.md  2026-04-21-file-palette-design.md  2026-04-23-file-index-persistent-cache-design.md  2026-04-23-file-palette-changed-files-section-design.md  2026-04-23-tray-first-ux-design.md  2026-04-24-shared-components-design.md  2026-04-28-file-palette-custom-roots-ui-design.md  2026-04-28-sql-autocomplete-design.md  2026-04-30-agent-overview-design.md  2026-04-30-file-palette-v2-design.md  2026-04-30-unified-merge-celebration-design.md
docs/whats-new/: README.md
plans/: feature-parity.md  implementation-plan.md
promo-video/: package-lock.json  package.json
promo-video/src/: Composition.tsx  Root.tsx  constants.ts
promo-video/src/components/: MockSidebar.tsx  PRDockLogo.tsx  ToolIcon.tsx
promo-video/src/scenes/: CTAScene.tsx  FeaturesScene.tsx  HookScene.tsx  ProblemScene.tsx  QuestionScene.tsx  SolutionScene.tsx
site/: .gitignore  README.md  astro.config.mjs  index.html  package-lock.json  package.json
site/public/: CNAME
site/src/components/: SectionHeading.tsx  SiteFooter.astro  SiteNav.astro  ThemeToggle.tsx
site/src/layouts/: Layout.astro
site/src/pages/: changelog.astro  download.astro  features.astro  gallery.astro  index.astro
site/src/styles/: global.css  tokens.css
src/BorgDock.Tauri/: .gitignore  agent-overview.html  badge.html  biome.json  file-palette.html  file-viewer.html  flyout.html  index.html  package-lock.json  package.json  palette.html  playwright.config.ts  pr-detail.html  sql.html  tsconfig.json  vite.config.ts  whats-new.html  work-item-palette.html  workitem-detail.html  worktree.html
src/BorgDock.Tauri/scripts/: build-grammars.sh  build-sql-grammar.sh  screenshot-heroes.mjs
src/BorgDock.Tauri/src/: App.tsx  badge-main.tsx  file-palette-main.tsx  file-viewer-main.tsx  flyout-main.tsx  main-agent-overview.tsx  main.tsx  palette-main.tsx  pr-detail-main.tsx  sql-main.tsx  whats-new-main.tsx  work-item-palette-main.tsx  workitem-detail-main.tsx  worktree-main.tsx
src/BorgDock.Tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/PRDock.App/: App.xaml  App.xaml.cs  PRDock.App.csproj  Program.cs
src/PRDock.App/Converters/: BoolToAngleConverter.cs  ExpanderArrowConverter.cs  InitialsToColorConverter.cs  LabelToVariantConverter.cs  MergeScoreToColorConverter.cs  PriorityToIconConverter.cs  RingLegendTooltipConverter.cs  ScoreToArcGeometryConverter.cs  SegmentArcConverter.cs  SignalTooltipConverter.cs  SizeToRectConverter.cs  StatusToColorConverter.cs  StringEqualityConverter.cs  WorkItemStateToColorConverter.cs
src/PRDock.App/Infrastructure/: AnimationHelper.cs  AzureDevOpsHttpClient.cs  GitHubHttpClient.cs  HotKeyManager.cs  HtmlFieldRenderer.cs  MarkdownRenderer.cs  MarkdownTextBlock.cs  ProcessTracker.cs  RetryHandler.cs  ThemeManager.cs  (+2 more)
src/PRDock.Tauri/: .gitignore  badge.html  file-palette.html  file-viewer.html  flyout.html  index.html  package-lock.json  package.json  palette.html  playwright.config.ts  pr-detail.html  sql.html  vite.config.ts  whats-new.html  workitem-detail.html  worktree.html
src/PRDock.Tauri/src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src/PRDock.Tauri/src-tauri/capabilities/: badge.json  file-palette.json  main.json  pr-detail.json  sql.json  whats-new.json  workitem-detail.json  worktree.json
src/PRDock.Tauri/src-tauri/src/: ado.rs  claude_api.rs  keychain.rs  lib.rs  main.rs  notification.rs  updater.rs
src/PRDock.Tauri/src-tauri/src/auth/: ado.rs  mod.rs
src/PRDock.Tauri/src-tauri/src/cache/: mod.rs
src/PRDock.Tauri/src-tauri/src/file_palette/: content_search.rs  files.rs  mod.rs  read_file.rs  windows.rs
src/PRDock.Tauri/src-tauri/src/git/: commands.rs  mod.rs  process.rs  worktree.rs
src/PRDock.Tauri/src-tauri/src/platform/: flyout_cache.rs  hotkey.rs  logs.rs  mod.rs  theme.rs  tray.rs  window.rs  work_area.rs
src/PRDock.Tauri/src-tauri/src/settings/: mod.rs  models.rs
src/PRDock.Tauri/src-tauri/src/sql/: mod.rs
tests/PRDock.IntegrationTests/: DiContainerTests.cs  PRDock.IntegrationTests.csproj  SettingsFileTests.cs
tests/PRDock.Tests/: PRDock.Tests.csproj
(+1152 files in other folders)
