[package]
name = "prdock"
version = "1.0.5"
description = "PRDock — cross-platform PR monitor sidebar"
authors = ["PRDock"]
edition = "2021"

[lib]
name = "prdock_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
urlencoding = "2"
log = "0.4"
png = "0.17"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "chrono", "winauth", "rust_decimal"] }
tauri-winrt-notification = "0.7"
tokio-util = { version = "0.7", features = ["compat"] }
rust_decimal = "1"
chrono = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
