[package]
name = "prdock"
version = "1.0.13"
description = "PRDock — cross-platform PR monitor sidebar"
authors = ["PRDock"]
edition = "2021"

[lib]
name = "prdock_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"

# keyring 3.x defaults to a mock backend unless a platform feature is enabled.
# apple-native + windows-native + sync-secret-service give us real OS keychains
# on macOS, Windows, and Linux respectively.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
urlencoding = "2"
log = "0.4"
png = "0.17"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "chrono", "winauth", "rust_decimal"] }
tokio-util = { version = "0.7", features = ["compat"] }
rust_decimal = "1"
chrono = "0.4"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
